--- a/.github/workflows/tools.yml
+++ b/.github/workflows/tools.yml
@@ -11,5 +11,6 @@ jobs:
       - name: Upload to Gist
         env:
           GH_TOKEN: ${{ secrets.TOKEN }}
+          GH_GIST_ID: ${{ vars.GH_GIST_ID }}
         run: |
-          gh gist edit eaddbe3197746a36b4d2f16445d5b18c --filename "tools-data.json" tools-data.json
+          gh gist edit $GH_GIST_ID --filename "tools-data.json" tools-data.json
